# ME-597

Lab1ws/: CMakeLists.txt  package.xml
Lab1ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Lab1ws/log/: latest_build
Lab1ws/task_1/: setup.cfg  setup.py
Lab1ws/task_1/launch/: pub_sub_launch.py
Lab1ws/task_1/task_1/: publisher_member_function.py  subscriber_member_function.py
Lab1ws/task_2/: package.xml  setup.py
Lab1ws/task_2/install/: local_setup.sh  setup.sh
Lab1ws/task_2/install/task_2/share/task_2/: package.sh
Lab1ws/task_2/log/: latest_build
Lab1ws/task_2/task_2/: client.py  service.py
Lab1ws/task_2/task_2/install/: local_setup.sh  setup.bash
Lab1ws/task_2/task_2/log/: latest_build
Lab1ws/task_2_interfaces/: package.xml
Lab1ws/task_2_interfaces/install/: setup.bash  setup.sh  setup.zsh
bag_files/task_1/: metadata.yaml  task_1_0.db3
bag_files/task_2/: metadata.yaml  task_2_0.db3
bag_files/task_3/: metadata.yaml  task_3_0.db3
lab1ws/log/: latest_build
lab1ws/task_1/: package.xml  setup.py
lab1ws/task_2/: setup.py
lab1ws/task_2/install/: setup.sh
lab1ws/task_2/log/: latest_build
lab1ws/task_2/task_2/install/: setup.ps1  setup.sh  setup.zsh
lab1ws/task_2_interfaces/: CMakeLists.txt  package.xml
lab1ws/task_2_interfaces/install/: local_setup.sh  setup.ps1
lab1ws/task_2_interfaces/install/task_2_interfaces/share/task_2_interfaces/: package.zsh
lab1ws/task_2_interfaces/log/: latest_build
lab2ws/install/: local_setup.sh  setup.sh
lab2ws/log/: latest_build
lab2ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
lab2ws/src/log/: latest_build
lab2ws/src/task_3/: package.xml  setup.py
lab2ws/src/task_3/launch/: pid_control_launch.py
lab2ws/src/task_3/task_3/: pid_controller.py
lab2ws/src/task_3_interfaces/: CMakeLists.txt
lab2ws/src/task_3_interfaces/sensor_msgs/: LaserScan.msg
lab3ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
lab3ws/log/: latest_build
lab3ws/src/install/: local_setup.sh  setup.sh
lab3ws/src/launch/: gen_sync_map_launch.py
lab3ws/src/log/: latest_build
lab3ws/src/task_4/: auto_navigator.py  package.xml  setup.py
lab3ws/src/task_4/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
lab4ws/install/: local_setup.sh  setup.sh
lab4ws/log/: latest_build
lab4ws/src/task_5/: package.xml  setup.py
lab4ws/src/task_6/: package.xml  setup.py
(+115 files in other folders)
