<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>task_2</name>
  <version>0.0.0</version>
  <description>ROS 2 ament_python package with custom service server and service client node exchanging via a custom message and service interface</description>
  <maintainer email="cflaherty@gmail.com">Cian Flaherty</maintainer>
  <license>Apache License 2.0</license>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>task_2_interfaces</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
